--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -1,10 +1,10 @@
 html {
-    height: 100%;
+    height: 100vh;
     border: solid rgb(225, 225, 225);
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: bold;
     color: rgb(225, 225, 225);
     background-color: rgb(7, 7, 7);
