--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -7,30 +7,46 @@ html {
     font-size: 1.5em;
     font-weight: bold;
     color: rgb(225, 225, 225);
-    background-color: rgb(7, 7, 7);
+    background-color: rgb(31, 31, 31);
 }
 
 a {
     color: rgb(164, 183, 245);
 }
 
+h3 {
+    margin-left: 10px;
+}
+
+.searchForm {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5em;
+}
+
+input {
+    width: 60px;
+    padding: 5px; 
+    margin: 10px;
+}
+
 .grid {
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    flex-wrap: wrap;
-    max-width: 900px;
+    max-width: 1100px;
     margin-top: 3rem;
 }
 
 .school {
   margin: 1rem;
   flex-basis: 45%;
-  padding: 1.5rem;
+  padding: .25rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid rgb(255, 255, 255);
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
 }
@@ -38,11 +54,18 @@ a {
 .park {
     margin: 1rem;
     flex-basis: 45%;
-    padding: 1.5rem;
+    padding: .25rem;
     text-align: left;
     color: inherit;
     text-decoration: none;
-    border: 1px solid #eaeaea;
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 10px;
     transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+@media (max-width: 600px) {
+    .grid {
+        width: 100%;
+        flex-direction: column;
+    }
 }
